--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Python: api submodule",
             "type": "python",
             "request": "launch",
-            "module": "ocean_sdk.api.${fileBasenameNoExtension}",
+            "module": "seastate.api.${fileBasenameNoExtension}",
             "console": "integratedTerminal",
             "justMyCode": true
         },
@@ -16,7 +16,7 @@
             "name": "Python: module debug",
             "type": "python",
             "request": "launch",
-            "module": "ocean_sdk.${fileBasenameNoExtension}",
+            "module": "seastate.${fileBasenameNoExtension}",
             "console": "integratedTerminal",
             "justMyCode": true
         },
