--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "seastate"
-version = "0.1.1"
-description = "Collect seastate data based on location and timeframe"
+version = "0.1.2"
+description = "Collect ocean measurement data based on location and timeframe"
 authors = ["Ivo <ivorivetta@users.noreply.github.com>"]
 license = "MIT"
 readme = "README.md"
