--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
-    "python.linting.banditEnabled": true,
-    "python.linting.enabled": true,
     "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true
+    "python.testing.pytestEnabled": true,
+    "python.analysis.extraPaths": [
+        "seastate"
+    ],
+    "terminal.integrated.env.osx": {
+        "python.envFile": "${workspaceFolder}/.env",
+    },
 }
